--- a/css/index.css
+++ b/css/index.css
@@ -14,17 +14,29 @@ li {
   padding: 0;
 }
 body {
-  background: #dc758f;
+  background: #cee5d0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  overflow-x: hidden;
 }
 /* end */
 
 /* container styles */
 .container {
   display: flex;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
-  background-color: rgb(13, 6, 40, 0.7);
-  padding: 15px 0;
+  padding: 5px;
+  width: 95vw;
+  margin: 5% auto;
+  border-bottom: 1px solid #969696;
+  gap: 10%;
 }
 /* end */
 
@@ -32,42 +44,121 @@ body {
 .nav-bar {
   display: flex;
   align-items: center;
+  gap: 20px;
+  margin: 0 auto;
 }
 .nav-bar ul {
   display: flex;
   gap: 20px;
 }
 .nav-bar li {
-  background: #00dcb0;
   padding: 10px;
   border-radius: 15px;
-  color: white;
+  color: #003865;
   cursor: pointer;
 }
 .nav-bar li:hover {
-  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2); */
+  text-decoration: underline;
 }
 /* end */
 
 /* logo styles */
-.logo {
-  display: flex;
-  justify-self: center;
-  color: white;
+.my-app-logo {
+  width: 200px;
+  margin: 0 auto;
 }
 /* end */
 
 /* login button styling */
 #login-btn {
   cursor: pointer;
-  background-image: linear-gradient(to right, #00dcb0, rgb(55, 55, 171));
   border: none;
   color: white;
   padding: 10px 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   font-size: medium;
+  background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+  font-weight: 300;
+  font-size: 22px;
 }
 #login-btn:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
 /* end */
+
+/* chat svg */
+.chat-svg {
+  width: 60vw;
+  display: block;
+  margin: 0 auto;
+  min-width: 100px;
+}
+.bg {
+  background-image: linear-gradient(
+    126.25deg,
+    #f5f0bb 32.14%,
+    #90c8ac 88.53%,
+    #c4dfaa 88.53%
+  );
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 20px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+.background-img {
+  opacity: 0.8;
+}
+#text {
+  color: #003865;
+  margin: 40px;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 47px;
+  z-index: 1;
+}
+/* end */
+
+/* footer */
+.github-link {
+  background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+  padding: 20px 0;
+  font-size: 22px;
+  text-align: center;
+  margin-top: 20px;
+}
+.github-icon {
+  width: 30px;
+  vertical-align: middle;
+  border-radius: 50%;
+  fill: #1b1f23;
+  cursor: pointer;
+}
+/*end*/
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 12px;
+  }
+  #login-btn {
+    cursor: pointer;
+    border: none;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+    font-weight: 300;
+    font-size: 12px;
+  }
+  .github-link {
+    font-size: 12px;
+  }
+  .chat-svg {
+    width: 80vw;
+  }
+  #text {
+    font-size: 16px;
+  }
+}
