--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -4,6 +4,9 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+body {
+  padding-bottom: 40px;
+}
 h1 {
   text-align: center;
   font-weight: 400;
@@ -13,6 +16,61 @@ h2 {
   text-align: center;
   margin: 50px 0;
 }
+/* nav bar styles */
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20vw;
+  padding: 10px 0;
+  background-color: rgb(255, 255, 255, 0.4);
+  padding: 40px 0;
+}
+.profile {
+  display: flex;
+  align-items: center;
+}
+.profile-and-logout {
+  display: flex;
+  align-items: center;
+  gap: 10vw;
+}
+.my-app-logo {
+  width: 200px;
+}
+.logout-btn {
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: medium;
+  background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+  font-weight: 300;
+  font-size: 16px;
+  align-self: center;
+}
+.logout-btn:hover {
+  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+}
+/*end*/
+/* login btn */
+#login-btn {
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: medium;
+  background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+  font-weight: 300;
+  font-size: 22px;
+  align-self: center;
+}
+#login-btn:hover {
+  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+}
+/* end */
 .checkbox-input {
   display: none;
 }
@@ -50,19 +108,20 @@ h2 {
 }
 .user-input {
   display: flex;
-  gap: 0;
+  gap: 5px;
+  justify-content: center;
   margin-bottom: 100px;
 }
-.message {
-  width: 50vw;
-  padding-left: 10px;
-}
-input {
+textarea {
+  width: 40vw;
+  resize: vertical;
+  padding: 10px;
   border: 1px solid rgba(51, 51, 51, 0.3);
+  border-radius: 5px;
 }
-input:focus {
+textarea:focus {
   outline: none;
-  box-shadow: 0 0 10px #43d9be;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
 }
 .checkbox {
   background: #43d9be;
@@ -79,28 +138,56 @@ input:focus {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
 .btn-form {
+  border: none;
   background: #43d9be;
   color: #003865;
   box-shadow: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  padding: 10px;
+  border-radius: 5px;
+  padding: 10px 20px;
   cursor: pointer;
+  align-self: center;
 }
 .btn-form:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
-.your-msg {
-  align-self: center;
-  background-color: lightgray;
-  padding: 10px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+/* user info and email */
+.current-user {
+  display: flex;
+  align-items: center;
 }
-.display {
-  display: none;
+.username-and-email {
+  position: relative;
+  padding: 7px;
+  cursor: pointer;
 }
-
+.email {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  white-space: nowrap;
+  padding: 10px 15px;
+  visibility: hidden;
+  transition: opacity 0.5s ease;
+  border-radius: 20px;
+}
+.email::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  border: 15px solid;
+  border-color: #333 #0000 #0000 #0000;
+}
+.username-and-email:hover .email {
+  top: -130%;
+  visibility: visible;
+  opacity: 1;
+}
+/*end*/
 .general {
   background: #73a9ad;
   border: 1px solid #73a9ad;
@@ -151,6 +238,27 @@ input:focus {
   width: 15px;
 }
 
-.user-img{
-    width: 30px;
+.user-img {
+  width: 30px;
+}
+.text-msg {
+  overflow-wrap: break-word;
+}
+@media screen and (max-width: 500px) {
+  .user-input {
+    width: 90vw;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 680px) {
+  .user-input {
+    width: 90vw;
+    margin: 0 auto;
+  }
+  .nav-bar {
+    gap: 7vw;
+  }
+}
+.display {
+  display: none;
 }
