--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ li {
   padding: 0;
 }
 body {
-  background: #cee5d0;
+  background: rgb(206, 229, 208, 0.4);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -43,6 +43,7 @@ body {
 /* navbar styles */
 .nav-bar {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 20px;
   margin: 0 auto;
@@ -66,6 +67,8 @@ body {
 /* logo styles */
 .my-app-logo {
   width: 200px;
+}
+.a-tag-logo {
   margin: 0 auto;
 }
 /* end */
@@ -83,6 +86,23 @@ body {
   font-size: 22px;
 }
 #login-btn:hover {
+  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+}
+/* end */
+
+/* logout button  */
+.logout-btn {
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: medium;
+  background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
+  font-weight: 300;
+  font-size: 16px;
+}
+.logout-btn:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
 /* end */
@@ -137,7 +157,50 @@ body {
   cursor: pointer;
 }
 /*end*/
+/*user image*/
+.user-img {
+  width: 30px;
+}
+/*end*/
 
+/* user info and email */
+.current-user {
+  display: flex;
+  align-items: center;
+}
+.username-and-email {
+  position: relative;
+  padding: 7px;
+  cursor: pointer;
+}
+.email {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  white-space: nowrap;
+  padding: 10px 15px;
+  visibility: hidden;
+  transition: opacity 0.5s ease;
+  border-radius: 20px;
+}
+.email::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  border: 15px solid;
+  border-color: #333 #0000 #0000 #0000;
+}
+.username-and-email:hover .email {
+  top: -130%;
+  visibility: visible;
+  opacity: 1;
+}
+/*end*/
 @media screen and (max-width: 500px) {
   body {
     font-size: 12px;
@@ -162,3 +225,12 @@ body {
     font-size: 16px;
   }
 }
+@media screen and (max-width: 625px) {
+  .email {
+  }
+}
+/* display none */
+.display {
+  display: none;
+}
+/* end */
