--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ li {
 body {
   background: rgb(206, 229, 208, 0.4);
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -28,28 +28,20 @@ body {
 /* container styles */
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
   align-items: center;
-  padding: 5px;
-  width: 95vw;
-  margin: 5% auto;
+  justify-content: center;
+  gap: 40%;
+  flex-wrap: wrap;
   border-bottom: 1px solid #969696;
-  gap: 10%;
+  margin: 40px 0;
+  padding: 10px 0;
 }
 /* end */
 
 /* navbar styles */
 .nav-bar {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
-  margin: 0 auto;
-}
-.nav-bar ul {
-  display: flex;
   gap: 20px;
 }
 .nav-bar li {
@@ -59,7 +51,6 @@ body {
   cursor: pointer;
 }
 .nav-bar li:hover {
-  /* box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2); */
   text-decoration: underline;
 }
 /* end */
@@ -69,7 +60,6 @@ body {
   width: 200px;
 }
 .a-tag-logo {
-  margin: 0 auto;
 }
 /* end */
 
@@ -84,6 +74,7 @@ body {
   background: linear-gradient(127.27deg, #73a9ad 0%, #90c8ac 58.92%);
   font-weight: 300;
   font-size: 22px;
+  margin: 0 auto;
 }
 #login-btn:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
@@ -225,8 +216,9 @@ body {
     font-size: 16px;
   }
 }
-@media screen and (max-width: 625px) {
-  .email {
+@media screen and (max-width: 716px) {
+  .container {
+    justify-content: center;
   }
 }
 /* display none */
