--- a/css/signup.css
+++ b/css/signup.css
@@ -92,3 +92,11 @@ a {
     width: 63vw;
   }
 }
+@media screen and (max-width: 430px) {
+  .container {
+    width: 95vw;
+  }
+  .signup {
+    width: 85vw;
+  }
+}
