--- a/css/index.css
+++ b/css/index.css
@@ -59,8 +59,6 @@ body {
 .my-app-logo {
   width: 200px;
 }
-.a-tag-logo {
-}
 /* end */
 
 /* login button styling */
@@ -128,7 +126,6 @@ body {
   font-weight: 500;
   font-size: 35px;
   line-height: 47px;
-  z-index: 1;
 }
 /* end */
 
@@ -226,3 +223,24 @@ body {
   display: none;
 }
 /* end */
+
+@media screen and (max-width: 430px) {
+  .bg {
+    position: relative;
+  }
+  .background-img {
+    opacity: 0.6;
+    padding: 40px 0;
+  }
+  #text {
+    margin: 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    position: absolute;
+    z-index: 1;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
