--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -242,6 +242,8 @@ textarea:focus {
   border: 1px solid black;
   padding: 10px 20px;
   border-radius: 5px;
+  background-color: white;
+  width: 50vw;
 }
 .onmsg-username {
   color: blueviolet;
@@ -250,11 +252,12 @@ textarea:focus {
 .message-header {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0px;
   padding-bottom: 15px;
 }
 .clock {
   width: 15px;
+  margin: 0 3px 0 10px;
 }
 .time-sent {
   color: #666;
