--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -232,7 +232,8 @@ textarea:focus {
 .message-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  align-items: center;
+  gap: 30px;
   max-width: 70vw;
   margin: 0 auto;
 }
