--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -271,9 +271,17 @@ textarea:focus {
   overflow-wrap: break-word;
 }
 @media screen and (max-width: 500px) {
+  .message-container {
+    align-items: flex-start;
+    margin-left: 10px;
+  }
+  .user-message {
+    width: 100%;
+  }
   .user-input {
     width: 90vw;
     margin: 0 auto;
+    flex-wrap: wrap;
   }
   .chatrooms,
   .rooms {
@@ -284,10 +292,28 @@ textarea:focus {
   textarea {
     width: 85vw;
   }
-  .checkbox,
-  .checkbox-checked {
-    width: 80%;
-  }
+}
+.button-to {
+  text-decoration: none;
+  background-color: grey;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.button-to:hover {
+  box-shadow: 0 0 0 1000px inset rgba(255, 255, 255, 0.2);
+}
+.hrefs {
+  background: #333;
+  padding: 20px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 5px;
+  border-radius: 5px;
+  position: fixed;
+  left: -136px;
 }
 @media screen and (max-width: 680px) {
   .user-input {
