--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,12 +1,22 @@
+/* reset styles */
 * {
   box-sizing: border-box;
   margin: 0;
+}
+body,
+html {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-body {
-  padding-bottom: 40px;
-}
+/* end */
+/*titles and subtitles*/
 h1 {
   text-align: center;
   font-weight: 400;
@@ -16,27 +26,24 @@ h2 {
   text-align: center;
   margin: 50px 0;
 }
+/*end*/
 /* nav bar styles */
 .nav-bar {
   display: flex;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20vw;
-  padding: 10px 0;
+  gap: 30%;
+  padding: 35px 20px;
   background-color: rgb(255, 255, 255, 0.4);
-  padding: 40px 0;
+  width: 100%;
 }
-.profile {
+.half-nav {
   display: flex;
-  align-items: center;
-}
-.profile-and-logout {
-  display: flex;
-  align-items: center;
-  gap: 10vw;
+  gap: 10px;
 }
 .my-app-logo {
-  width: 200px;
+  width: 170px;
 }
 .logout-btn {
   cursor: pointer;
@@ -53,8 +60,6 @@ h2 {
 .logout-btn:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
-/*end*/
-/* login btn */
 #login-btn {
   cursor: pointer;
   border: none;
@@ -70,81 +75,7 @@ h2 {
 #login-btn:hover {
   box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
 }
-/* end */
-.checkbox-input {
-  display: none;
-}
-.add {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  align-items: center;
-}
-.chatrooms {
-  width: 45vw;
-  background: #43d9be;
-  border-radius: 5px;
-}
-.rooms {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  background: #cee5d0;
-  width: max-content;
-  border-radius: 5px;
-  padding: 20px 0;
-  width: 45vw;
-}
-.down-arrow {
-  color: white;
-  width: 25px;
-  cursor: pointer;
-}
-.user-input {
-  display: flex;
-  gap: 5px;
-  justify-content: center;
-  margin-bottom: 100px;
-}
-textarea {
-  width: 40vw;
-  resize: vertical;
-  padding: 10px;
-  border: 1px solid rgba(51, 51, 51, 0.3);
-  border-radius: 5px;
-}
-textarea:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
-}
-.checkbox {
-  background: #43d9be;
-  border: 1px solid #43d9be;
-  color: white;
-  cursor: pointer;
-  padding: 10px;
-  width: 30vw;
-  border-radius: 5px;
-  text-align: center;
-}
-.checkbox:hover {
-  border: 1px solid rgb(0, 0, 0, 0.2);
-  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
-}
-.btn-form {
-  border: none;
-  background: #43d9be;
-  color: #003865;
-  box-shadow: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  align-self: center;
-}
-.btn-form:hover {
-  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
-}
+
 /* user info and email */
 .current-user {
   display: flex;
@@ -184,15 +115,137 @@ textarea:focus {
 }
 /*end*/
 
-/* dropdown functionality */
-#dropdown:checked + .rooms {
+/* end */
+
+/*user input form styles*/
+.add {
   display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  width: 100%;
 }
-.dropdown-label {
+.chatrooms {
+  width: 45vw;
+  background: #43d9be;
+  border-radius: 5px;
+}
+.rooms {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  background: #cee5d0;
+  width: max-content;
+  border-radius: 5px;
+  padding: 20px 0;
+  width: 45vw;
+}
+.down-arrow {
+  color: white;
+  width: 25px;
+  cursor: pointer;
+}
+.user-input {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   justify-content: center;
+  margin-bottom: 100px;
+}
+textarea {
+  width: 60vw;
+  resize: vertical;
+  padding: 10px;
+  border: 1px solid rgba(51, 51, 51, 0.3);
+  border-radius: 5px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+textarea:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
+}
+.checkbox {
+  background: #43d9be;
+  border: 1px solid #43d9be;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  width: 30vw;
+  min-width: fit-content;
+  border-radius: 5px;
+  text-align: center;
+}
+.checkbox:hover {
+  border: 1px solid rgb(0, 0, 0, 0.2);
+  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+}
+.btn-form {
+  border: none;
+  background: #43d9be;
+  color: #003865;
+  box-shadow: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  align-self: center;
+}
+.btn-form:hover {
+  box-shadow: 0 0 10000px inset rgb(0, 0, 0, 0.2);
+}
+/*end*/
+
+/* user messages and message container styles */
+.message-container {
+  width: 100vw;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: flex-start;
+}
+
+.user-message {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  padding: 10px 5px;
+  border-radius: 5px;
+  background-color: white;
+  width: fit-content;
+}
+.onmsg-username {
+  color: blueviolet;
+  font-size: 15px;
+}
+.message-header {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0px;
+  padding-bottom: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.clock {
+  width: 10px;
+  margin: 0 3px 0 10px;
+}
+.time-sent {
+  color: #666;
+  font-size: 14px;
+}
+.user-img {
+  width: 30px;
+}
+.text-msg {
+  overflow-wrap: break-word;
+  max-width: 95vw;
 }
 /* end */
+
 /* selecting rooms button styles */
 .checkbox-input:checked + .checkbox,
 .checkbox-input:checked + .checkbox:hover {
@@ -207,7 +260,10 @@ textarea:focus {
   text-align: center;
   box-shadow: none;
 }
-/**/
+.checkbox-input {
+  display: none;
+}
+/*rooms*/
 .general {
   background: #73a9ad;
   border: 1px solid #73a9ad;
@@ -228,71 +284,19 @@ textarea:focus {
   border: 1px solid #f5f0bb;
   color: #003865;
 }
+/*end*/
 
-.message-container {
+/* dropdown functionality */
+#dropdown:checked + .rooms {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  max-width: 70vw;
-  margin: 0 auto;
 }
-.user-message {
+.dropdown-label {
   display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-  padding: 10px 20px;
-  border-radius: 5px;
-  background-color: white;
-  width: 50vw;
+  justify-content: center;
 }
-.onmsg-username {
-  color: blueviolet;
-  font-size: 15px;
-}
-.message-header {
-  display: flex;
-  align-items: center;
-  gap: 0px;
-  padding-bottom: 15px;
-}
-.clock {
-  width: 15px;
-  margin: 0 3px 0 10px;
-}
-.time-sent {
-  color: #666;
-  font-size: 14px;
-}
-.user-img {
-  width: 30px;
-}
-.text-msg {
-  overflow-wrap: break-word;
-}
-@media screen and (max-width: 500px) {
-  .message-container {
-    align-items: flex-start;
-    margin-left: 10px;
-  }
-  .user-message {
-    width: 100%;
-  }
-  .user-input {
-    width: 90vw;
-    margin: 0 auto;
-    flex-wrap: wrap;
-  }
-  .chatrooms,
-  .rooms {
-    width: 85vw;
-    margin: 0 auto;
-  }
-  .message-container,
-  textarea {
-    width: 85vw;
-  }
-}
+/* end */
+
+/* div containing buttons: to form/post and back to top */
 .button-to {
   text-decoration: none;
   background-color: grey;
@@ -313,17 +317,63 @@ textarea:focus {
   gap: 5px;
   border-radius: 5px;
   position: fixed;
+  top: 300px;
   left: -136px;
+  cursor: pointer;
 }
-@media screen and (max-width: 680px) {
-  .user-input {
-    width: 90vw;
-    margin: 0 auto;
-  }
-  .nav-bar {
-    gap: 7vw;
-  }
-}
+/*end*/
+
 .display {
   display: none;
+}
+
+.time {
+  display: flex;
+  align-items: center;
+}
+.send-a-message {
+  color: black;
+}
+.send-a-message:hover {
+  color: blue;
+}
+@media screen and (min-width: 600px) {
+  .message-container {
+    width: 95vw;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+  .hrefs {
+    top: 20%;
+  }
+}
+.test {
+  position: absolute;
+  top: 39%;
+  left: 50%;
+  transform: translateX(50%);
+  background-color: #333;
+  color: #fff;
+  white-space: nowrap;
+  padding: 10px 15px;
+  transition: opacity 0.5s ease;
+  border-radius: 20px;
+  visibility: hidden;
+}
+.hrefs:hover .test {
+  visibility: visible;
+}
+@media screen and (min-width: 760px) {
+  .user-message {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 10px 5px;
+    border-radius: 5px;
+    background-color: white;
+    width: 80vw;
+  }
 }
