--- a/css/login.css
+++ b/css/login.css
@@ -88,12 +88,15 @@ span {
     width: 63vw;
   }
 }
-@media screen and (max-width:430px){
-  
-  .container{
+@media screen and (max-width: 430px) {
+  .container {
     width: 95vw;
   }
-  .login{
+  .login {
     width: 80vw;
   }
+}
+
+.display {
+  display: none;
 }
