--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -83,6 +83,14 @@ a {
 
 /*email*/
 /*end*/
+.error {
+  font-size: small;
+  color: red;
+}
+.username-error,
+.password-error {
+  font-size: small;
+}
 
 @media screen and (max-width: 832px) {
   .container {
